feat: category CRUD API
